[metadata]
name = dracula-cli
version = attr: dracula.__version__
description = A beautiful command line interface for draculatheme.org and dracula in general
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wasi-master/dracula-cli
author = Wasi Master
author_email = arianmollik323@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Terminals
keywords =
    dracula
    dracula-cli
    dracula-theme
    python-dracula
project_urls =
    Bug Tracker = https://github.com/wasi-master/dracula-cli/issues
    Source = https://github.com/wasi-master/dracula-cli
    Say Thanks = https://saythanks.io/to/wasi-master

[options]
packages =
    dracula
install_requires =
    rich
    typer
    requests-cache
    rich-click
    humanize
    thefuzz
    textual
    textual-inputs==0.2.*
    rapidfuzz
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    dracula=dracula.__main__:app
pipx.run =
    dracula-cli=dracula.__main__:app

